fix: fixing unexpected value, cause the type of the parameter

--- a/.github/workflows/reusable-ci-summary.yml
+++ b/.github/workflows/reusable-ci-summary.yml
@@ -10,13 +10,13 @@ on:
         type: string
       tests_passed:
         required: true
-        type: number
+        type: string
       tests_failed:
         required: true
-        type: number
+        type: string
       coverage:
         required: true
-        type: number
+        type: string
 
 jobs:
   generate-and-post:
