--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -20,10 +20,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Simulate build
-        run: echo "build completed successfully" > build.log
+        run: |
+          echo "build completed successfully" > build.log
+          echo "Build complete." >> build.log
 
       - name: Simulate tests
-        run: echo "120 tests run, 0 failed" > test.log
+        run: |
+          echo "Running tests..." > test.log
+          echo "120 tests run, 2 failed" >> test.log
 
       - name: Extract test results
         id: export
