--- a/.github/workflows/reusable-ci-summary.yml
+++ b/.github/workflows/reusable-ci-summary.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/github-script@v7
         if: github.event_name == 'pull_request'
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.BOT_CI }}
           script: |
             const fs = require('fs');
             const body = fs.readFileSync('ci-summary.md', 'utf8');
